[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/blocks/gas/SteamSource.cs" type="Script" id=1]
[ext_resource path="res://source/blocks/gas/SteamController.gd" type="Script" id=2]
[ext_resource path="res://source/blocks/gas/SteamTilemap.gd" type="Script" id=3]
[ext_resource path="res://assets/Blocks_Final/auto-tiles/Block_Base_autotile.tres" type="TileSet" id=4]
[ext_resource path="res://assets/Blocks_Final/gas_blocks/Tileset_Steam.tres" type="TileSet" id=5]
[ext_resource path="res://source/blocks/gas/valve_icon.png" type="Texture" id=6]
[ext_resource path="res://Testing/Gas/TestSource.tscn" type="PackedScene" id=9]


[node name="Node2D" type="Node2D"]

[node name="GasController" type="Node2D" parent="."]
script = ExtResource( 2 )
iterations_per_sec = 4.0
flow_capacity = 2

[node name="Source" type="Node2D" parent="GasController"]
position = Vector2( 844, 712 )
script = ExtResource( 1 )
_sourceOutput = 6
_sourceStartsEnabled = false

[node name="Sprite" type="Sprite" parent="GasController/Source"]
position = Vector2( -119, -66 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Source2" type="Node2D" parent="GasController"]
position = Vector2( 2250, 1369 )
script = ExtResource( 1 )
_sourceOutput = 6
_sourceStartsEnabled = false

[node name="Sprite" type="Sprite" parent="GasController/Source2"]
position = Vector2( -119, -66 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Steam TileMap" type="TileMap" parent="GasController"]
z_index = 1000
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 128 )
format = 1
script = ExtResource( 3 )

[node name="Block TileMap" type="TileMap" parent="GasController"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -3, 2, 262144, -2, 2, 196615, -1, 2, 1, -65536, 2, 1, -65535, 2, 1, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -65526, 2, 1, -65525, 2, 1, -65524, 2, 1, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 1, -65519, 2, 1, -65518, 2, 1, -65517, 2, 1, -65516, 2, 1, -65515, 2, 1, -65514, 2, 1, -65513, 2, 1, -65512, 2, 2, 65534, 2, 65536, 65535, 2, 6, 0, 2, 131073, 1, 2, 131073, 2, 2, 131073, 3, 2, 131073, 4, 2, 131073, 5, 2, 131073, 6, 2, 131073, 7, 2, 131073, 8, 2, 131073, 9, 2, 131073, 10, 2, 131073, 11, 2, 131073, 12, 2, 7, 13, 2, 65537, 14, 2, 65537, 15, 2, 65537, 16, 2, 65537, 17, 2, 65537, 18, 2, 65537, 19, 2, 65537, 20, 2, 65537, 21, 2, 65537, 22, 2, 65537, 23, 2, 65537, 24, 2, 65542, 25, 2, 2, 131070, 2, 65536, 131071, 2, 65538, 65548, 2, 131072, 65549, 2, 131073, 65550, 2, 131073, 65551, 2, 131073, 65552, 2, 7, 65553, 2, 6, 65554, 2, 131073, 65555, 2, 131073, 65556, 2, 7, 65557, 2, 65537, 65558, 2, 65537, 65559, 2, 65537, 65560, 2, 65537, 65561, 2, 65538, 196606, 2, 65536, 196607, 2, 65538, 131088, 2, 65536, 131089, 2, 65538, 131092, 2, 65536, 131093, 2, 65537, 131094, 2, 65537, 131095, 2, 65537, 131096, 2, 65537, 131097, 2, 65538, 262142, 2, 65536, 262143, 2, 65538, 196624, 2, 65536, 196625, 2, 65538, 196628, 2, 65536, 196629, 2, 65537, 196630, 2, 65537, 196631, 2, 65537, 196632, 2, 65537, 196633, 2, 65538, 327678, 2, 65536, 327679, 2, 65538, 262160, 2, 65536, 262161, 2, 65538, 262164, 2, 65536, 262165, 2, 65537, 262166, 2, 65537, 262167, 2, 65537, 262168, 2, 65537, 262169, 2, 65538, 393214, 2, 65536, 393215, 2, 65538, 327696, 2, 65536, 327697, 2, 65538, 327700, 2, 65536, 327701, 2, 65537, 327702, 2, 65537, 327703, 2, 65537, 327704, 2, 65537, 327705, 2, 65538, 458750, 2, 65536, 458751, 2, 65538, 393232, 2, 65536, 393233, 2, 65538, 393236, 2, 65536, 393237, 2, 65537, 393238, 2, 65537, 393239, 2, 65537, 393240, 2, 65537, 393241, 2, 65538, 524286, 2, 65536, 524287, 2, 65542, 458752, 2, 1, 458753, 2, 1, 458754, 2, 1, 458755, 2, 2, 458768, 2, 65536, 458769, 2, 65538, 458772, 2, 65536, 458773, 2, 65537, 458774, 2, 65537, 458775, 2, 65537, 458776, 2, 65537, 458777, 2, 65538, 589822, 2, 65536, 589823, 2, 65537, 524288, 2, 65537, 524289, 2, 65537, 524290, 2, 65537, 524291, 2, 65538, 524304, 2, 131072, 524305, 2, 131074, 524308, 2, 65536, 524309, 2, 65537, 524310, 2, 65537, 524311, 2, 65537, 524312, 2, 65537, 524313, 2, 65538, 655358, 2, 65536, 655359, 2, 65537, 589824, 2, 65537, 589825, 2, 65537, 589826, 2, 65537, 589827, 2, 65538, 589844, 2, 131072, 589845, 2, 7, 589846, 2, 65537, 589847, 2, 65537, 589848, 2, 65537, 589849, 2, 65538, 720894, 2, 65536, 720895, 2, 6, 655360, 2, 131073, 655361, 2, 131073, 655362, 2, 131073, 655363, 2, 262150, 655364, 2, 262145, 655365, 2, 262145, 655366, 2, 262145, 655367, 2, 262145, 655368, 2, 262145, 655369, 2, 262145, 655370, 2, 262145, 655371, 2, 262145, 655372, 2, 262145, 655373, 2, 262145, 655374, 2, 262145, 655375, 2, 262146, 655381, 2, 65536, 655382, 2, 65537, 655383, 2, 65537, 655384, 2, 65537, 655385, 2, 65538, 786430, 2, 65536, 786431, 2, 65538, 720917, 2, 65536, 720918, 2, 65537, 720919, 2, 65537, 720920, 2, 65537, 720921, 2, 65538, 851966, 2, 65536, 851967, 2, 65542, 786432, 2, 1, 786433, 2, 1, 786434, 2, 1, 786435, 2, 1, 786436, 2, 1, 786437, 2, 1, 786438, 2, 1, 786439, 2, 1, 786440, 2, 1, 786441, 2, 1, 786442, 2, 1, 786443, 2, 1, 786444, 2, 1, 786445, 2, 1, 786446, 2, 1, 786447, 2, 1, 786448, 2, 1, 786449, 2, 1, 786450, 2, 1, 786451, 2, 1, 786452, 2, 1, 786453, 2, 65543, 786454, 2, 65537, 786455, 2, 65537, 786456, 2, 65537, 786457, 2, 65538, 917502, 2, 65536, 917503, 2, 65537, 851968, 2, 65537, 851969, 2, 65537, 851970, 2, 65537, 851971, 2, 65537, 851972, 2, 65537, 851973, 2, 65537, 851974, 2, 65537, 851975, 2, 65537, 851976, 2, 65537, 851977, 2, 65537, 851978, 2, 65537, 851979, 2, 65537, 851980, 2, 65537, 851981, 2, 65537, 851982, 2, 65537, 851983, 2, 65537, 851984, 2, 65537, 851985, 2, 65537, 851986, 2, 65537, 851987, 2, 65537, 851988, 2, 65537, 851989, 2, 65537, 851990, 2, 65537, 851991, 2, 65537, 851992, 2, 65537, 851993, 2, 65538, 983038, 2, 131072, 983039, 2, 131073, 917504, 2, 131073, 917505, 2, 131073, 917506, 2, 131073, 917507, 2, 131073, 917508, 2, 131073, 917509, 2, 131073, 917510, 2, 131073, 917511, 2, 131073, 917512, 2, 131073, 917513, 2, 131073, 917514, 2, 131073, 917515, 2, 131073, 917516, 2, 131073, 917517, 2, 131073, 917518, 2, 131073, 917519, 2, 131073, 917520, 2, 131073, 917521, 2, 131073, 917522, 2, 131073, 917523, 2, 131073, 917524, 2, 131073, 917525, 2, 131073, 917526, 2, 131073, 917527, 2, 131073, 917528, 2, 131073, 917529, 2, 131074 )

[node name="IterationTimer" type="Timer" parent="GasController"]
autostart = true

[node name="Source3" parent="GasController" instance=ExtResource( 9 )]
position = Vector2( 760, 1186 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1310, 814 )
zoom = Vector2( 3, 3 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
margin_left = 649.0
margin_top = 542.0
margin_right = 759.0
margin_bottom = 582.0
rect_scale = Vector2( 1.35173, 1.35173 )

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.803922 )
margin_left = 2057.0
margin_top = 1205.0
margin_right = 2164.0
margin_bottom = 1240.0
rect_scale = Vector2( 1.35173, 1.35173 )

[connection signal="SteamSourceChanged" from="GasController/Source" to="GasController" method="_on_Source_SteamSourceChanged"]
[connection signal="SteamSourceChanged" from="GasController/Source2" to="GasController" method="_on_Source_SteamSourceChanged"]
[connection signal="button_down" from="Button" to="GasController/Source" method="_on_button_down"]
[connection signal="button_down" from="Button2" to="GasController/Source2" method="_on_button_down"]
